# VentiChat

./: .env.example  .gitignore  Cargo.toml  README.md  app.js  cluster.js  go.mod  go.sum  main.go  package-lock.json  package.json  proxy.js  test-websocket.js
controllers/: adminController.js  authController.js  configController.js  fileController.js  messageController.js  roomController.js  systemInfoController.js  systemMonitorController.js  systemSettingController.js  userController.js  userdataController.js
docs/: api_documentation.md  api_test.md  db.md
internal/app/: server.go  (+1 more)
middleware/: adminPageAuthMiddleware.js  authMiddleware.js  authRateLimiter.js  databaseStatusMiddleware.js  ipBanMiddleware.js  messageRateLimiter.js  realIpMiddleware.js  redisStatusMiddleware.js  roomAdminMiddleware.js  roomCreatorMiddleware.js  roomMemberMiddleware.js
models/: banIp.js  index.js  joinRequest.js  message.js  room.js  roomMember.js  systemSetting.js  token.js  user.js
public/: admin.html  chat.html  index.html  login.html  main.html  profile.html  register.html  status.html
routes/: index.js
scripts/: init.js  reset.js
setup/: setup.html  setup.js
src/: config.rs  controllers.rs  db.rs  init.rs  lib.rs  main.rs  middleware.rs  models.rs  utils.rs  websocket.rs
utils/: auth.js  cleanupScheduler.js  databaseClient.js  fileUpload.js  jwt.js  logger.js  messageHandler.js  redisClient.js  roomManager.js  systemMonitor.js  userManager.js  websocketManager.js
web/: groups.html  index.html  login.html  register.html  resend-verification.html  verify-email.html
(+76 files in other folders)
